# confguard

./: .bumpversion.cfg  .bumpversion.toml  .confguard  .confguard-84d9d72c2e9547bc9db31174e03a343c.confguard  .cruft.json  .dockerignore  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .run  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  _cruft.json  _envrc  report.xml  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  publish-docker.yml  publish.yml  test.yml
.run/: Template Python tests.run.xml  pytest for test_functions.test_create_links.run.xml  pytest for test_functions.test_create_sentinel.run.xml  pytest in test_functions.py.run.xml  test-proj.run.xml  test_cli.run.xml
confguard/: Cargo.toml
confguard/resources/: confguard.toml  dot.envrc
confguard/src/: errors.rs  lib.rs  main.rs
confguard/src/cli/: args.rs  commands.rs  mod.rs
confguard/src/core/: config.rs  guard.rs  mod.rs
confguard/src/sops/: crypto.rs  gitignore.rs  manager.rs  mod.rs
confguard/src/util/: helper.rs  mod.rs  path.rs
confguard/src/util/helper/: path.rs  testing.rs
confguard/src/util/path/: extract_segments.rs  home_based.rs  link.rs  move_and_link.rs  replace_base.rs
confguard/tests/: test_lib.rs  test_main.rs
confguard/tests/cli/: mod.rs  test_commands.rs
confguard/tests/core/: mod.rs  test_guard_create_sentinel.rs  test_guard_create_sops_envs.rs  test_guard_delete_section.rs  test_guard_from_envrc.rs  test_guard_from_guarded_project.rs  test_guard_guard.rs  test_guard_new_for_guarding.rs  test_guard_relink.rs  test_guard_unguard.rs  test_guard_update_dot_envrc.rs
confguard/tests/sops/: mod.rs  test_crypto.rs  test_gitignore.rs  test_manager.rs  test_manager_collect_files.rs
confguard/tests/util/: mod.rs
confguard/tests/util/path/: mod.rs  test_link.rs  test_move_and_link.rs
docs/: Makefile  confguard.pptx
docs/source/: conf.py  index.rst
docs/source/dev/: index.rst
docs/source/user/: index.rst
examples/: quickstart.py
scripts/: init_env.py
src/: adapter.py
src/confguard/: __init__.py  __main__.py  adapter.py  environment.py  exceptions.py  helper.py  main.py  model.py  services.py
tests/: conftest.py  test-dist.bash  test_adapter.py  test_cli.py  test_environment.py  test_functions.py  test_helper.py  test_model.py  test_services.py
tests/resources/: .confguard
tests/resources/ref_proj/: .confguard  .run
tests/resources/test_proj/: .run  .test_proj-1b1b2ce734a94a2eb7629623c74832d9.confguard  .test_proj-d0c7b924a9994ea5b0b560758cd762f7.confguard
tests/resources/test_proj/xxx/: xxx.txt
