[metadata]
name = confguard
version = 1.0.3
description = "Save configuration files outside project in save place"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = sysid
author_email = sysid@gmx.de
url = https://github.com/sysid/confguard
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir=
    =src
	# directory containing all the packages (e.g.  src/mypkg, src/mypkg/subpkg1, ...)
install_requires =
    pydantic
    tomlkit
    typer
	rich
include_package_data = True
python_requires = >=3.9

[options.packages.find]
where=src

[options.package_data]
confguard = py.typed, *.md

[options.entry_points]
console_scripts =
    confguard = confguard.main:app

[isort]
profile = black
src_paths = src,tests
skip = .gitignore,.dockerignore,.tox,.venv,build,dist

[flake8]
max-complexity = 10
max-line-length = 88
ignore =
	E203  ; whitespace before ‘:’ (black)
	F541  ; f-string is missing placeholders
	B008  ; Do not perform function calls in argument defaults.
	E501  ; line too long (will be taken care of by black)
	ASS001 ; do not use bare asserts
exclude =
	.git
	__pycache__
	.venv
	.eggs
	*.egg
	dist

[mypy]
python_version = 3.11
disallow_untyped_defs = True
warn_return_any = True
warn_unused_configs = True
follow_imports = silent
no_implicit_optional = True
disallow_any_unimported = True
check_untyped_defs = True
show_error_codes = True
warn_unused_ignores = True
exclude = (tests,)

[mypy-xxx]
disallow_untyped_defs = False
ignore_missing_imports = True

[coverage:run]
omit = tests/*,**/__main__.py,**/.venv/*,**/site-packages/*,examples/*
branch = True

[coverage:report]
show_missing = True
skip_covered = True
;fail_under = 75

[tool.scriv]
format = md
version = literal: ./src/confguard/__init__.py: __version__
