[package]
name = "confguard"
version = "4.0.0"
edition = "2021"
description = "Guard your sensitive configuration files"
keywords = ["confguard", "cg"]
repository = "https://github.com/sysid/confguard"
readme = "../README.md"
license = "BSD-3-Clause"
authors = ["sysid"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
colored = "2.2.0"
config = "0.14.0"
derive_builder = "0.20.2"
derive_more = { version = "1.0.0", features = ["constructor", "display", "from"] }
dirs = "5.0.1"
fs_extra = "1.3.0"
include_dir = { version = "0.7.4", features = ["glob"] }
inquire = "0.9"
itertools = "0.14"
once_cell = "1.20.2"
pathdiff = { version = "0.2.3" }
rayon = "1.10.0"
regex = "1.11.1"
remove_dir_all = "1.0"
rstest = "0.26"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_with = { version = "3.9.0", features = ["chrono"] }
tempfile = "3.15.0"
thiserror = "2.0.9"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
mockall = "0.14"
predicates = "3.1.2"
